# open-swe

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CUSTOMIZATION.md  Dockerfile  INSTALLATION.md  Makefile  README.md  REVIEWER_EVAL_PLAN.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  pr_lint.yml
agent/: prompt.py  reviewer.py  server.py  webapp.py
agent/integrations/: daytona.py  langsmith.py
agent/middleware/: __init__.py  ensure_no_empty_msg.py  exclude_tools.py  notify_step_limit.py  open_pr.py  sanitize_tool_inputs.py
agent/tools/: __init__.py  commit_and_open_pr.py  edit_pull_request.py  github_ci.py  github_comment.py  http_request.py  linear_comment.py
agent/utils/: authorship.py  github.py  github_comments.py  model.py
evals/reviewer/: README.md  build_dataset.py  judge.py  run_eval.py  target.py
evals/reviewer/golden_comments/: cal_dot_com.json  discourse.json  grafana.json  keycloak.json  sentry.json
scripts/: create_sandbox_snapshot.py
tests/: test_commit_and_open_pr_403.py  test_commit_and_open_pr_workflow_scope.py  test_daytona_integration.py  test_edit_pull_request.py  test_ensure_no_empty_msg.py  test_github_ci.py  test_github_create_pr.py  test_github_issue_webhook.py  test_github_pr_assignment.py  test_github_pr_label.py  test_github_security.py  test_notify_step_limit_middleware.py  test_open_pr_middleware.py  test_proxy_auth.py  test_sanitize_tool_inputs.py
