[project]
name = "open-swe-agent"
version = "0.1.0"
description = "Open SWE Agent - Python agent for automating software engineering tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "deepagents>=0.5.6",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "httpx>=0.28.1",
    "PyJWT>=2.12.1",
    "cryptography>=41.0.0",
    "langgraph-sdk>=0.3.13",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
    "markdownify>=1.2.2",
    "langchain-anthropic>=1.4.2",
    "langgraph-cli[inmem]>=0.4.24",
    "langsmith>=0.8.0",
    "langchain-openai>=1.2.1",
    "langchain-daytona>=0.0.5",
    "langchain-modal>=0.0.3",
    "langchain-runloop>=0.0.4",
    "exa-py>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "Pygments>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
